--- a/Random Choice Picker/index.html
+++ b/Random Choice Picker/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h3>Enter all of the choices divide by a comma (',').
+        <h3>Enter all of the choices divided by a comma (',').
             <br>Press enter when you are done</h3>
         <textarea name="" id="textarea" placeholder="Enter choices here..."></textarea>    
 
