--- a/increment-counter/index.html
+++ b/increment-counter/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <title>Increment Counter</title>
 </head>
 <body>
@@ -16,14 +17,14 @@
 
     <div class="counter-container">
         <i class="fab fa-facebook fa-3x"></i>
-        <div class="counter" data-target="12000"></div>
+        <div class="counter" data-target="7500"></div>
         <span>Facebook Follwers</span>
     </div>
 
     <div class="counter-container">
         <i class="fab fa-youtube fa-3x"></i>
-        <div class="counter" data-target="12000"></div>
-        <span>Youtube Follwers</span>
+        <div class="counter" data-target="5000"></div>
+        <span>Youtube Subscribers</span>
     </div>
 
 
